<resources>
    <string name="app_name">Swift Installer</string>
    <string name="aosp_icons">AOSP</string>
    <string name="apply">Apply</string>
    <string name="base_theme">Base theme</string>
    <string name="basic_usage">Basic usage</string>
    <string name="bg_nature">Nature</string>
    <string name="bg_ocean">Ocean</string>
    <string name="big_tile_install_msg">Install separate or all overlays here</string>
    <string name="big_tile_install_title">Install / Uninstall overlays</string>
    <string name="big_tile_install_updates">Install updates</string>
    <string name="big_tile_personalize_msg">Change background and accent color</string>
    <string name="big_tile_personalize_title">Personalize</string>
    <string name="big_tile_update_msg">Some overlays were updated. Install them.</string>
    <string name="cancel">Cancel</string>
    <string name="category_accent">Accent</string>
    <string name="category_background">Background</string>
    <string name="category_icons">Icons</string>
    <string name="confirm">Confirm</string>
    <string name="connections">Connections</string>
    <string name="connections_desc">Wi-Fi, Bluetooth, Data usage, Flight mode</string>
    <string name="credits_msg">Credits to Projekt Development Team &amp; SlimRoms Ltd for the encryption implementation</string>
    <string name="custom_background">Custom background</string>
    <string name="dark">Dark</string>
    <string name="dark_notifications">Dark notifications</string>
    <string name="dark_notifications_preview_normal">A preview of normal dark notifications</string>
    <string name="disable">Disable</string>
    <string name="enable_shadow_title">Enable shadow around text</string>
    <string name="examined_result_msg">After you examined the result, and optionally sent an error log, you need to manually reboot to finish the installation!</string>
    <string name="examined_result_msg_noerror">You need to reboot to finish the installation!</string>
    <string name="examined_result_msg_error">Overlays failed to install. Click the info button next to the overlay\'s name to reveal why, and optionally email a log to the support team.</string>
    <string name="flat">Flat</string>
    <string name="got_it">Got it!</string>
    <string name="hashtag">#</string>
    <string name="hex">HEX</string>
    <string name="hex_string">#%1$s</string>
    <string name="image">image</string>
    <string name="info_card_failed_msg">One reason an app fails to install is that the app version doesn\'t match the overlays version. We usually update the theme and add support for new versions within a few days, so please be patient.</string>
    <string name="install_count">%1$d / %2$d</string>
    <string name="installing_and_uninstalling_msg">In the process of installing or uninstalling the Android System overlay some apps might force close. This is expected, and normal. Everything will work fine once you rebooted after installation is completed.</string>
    <string name="installing_and_uninstalling_title">Android System</string>
    <string name="invalid_accent">Invalid Accent</string>
    <string name="invalid_background">Invalid Background</string>
    <string name="link_slimroms">https://slimroms.org</string>
    <string name="link_substratum_template">https://github.com/substratum/template</string>
    <string name="material">Material</string>
    <string name="night">Night</string>
    <string name="notif_fix_desc_summary">When using dark notifications: Some notification texts are hardcoded black, e.g. WhatsApp notifications. This fix adds a shadow around all text, making black text visible. You can see how it looks in the preview above.</string>
    <string name="dark_notifications_preview_shadow">Notification fix makes black text visible, e.g. WhatsApp notifications.</string>
    <string name="notification_tweaks">Notification background</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Block, allow, prioritise</string>
    <string name="ok">OK</string>
    <string name="overflow_about">About</string>
    <string name="overlays">Overlays</string>
    <string name="overlays_action_install">Install</string>
    <string name="overlays_action_uninstall">Uninstall</string>
    <string name="overlays_action_update">Update</string>
    <string name="overlays_toolbar_accent">Accent:</string>
    <string name="overlays_toolbar_bg">Bg:</string>
    <string name="preview_time_string">22:20 | Sun 19 April</string>
    <string name="proceed">Proceed</string>
    <string name="progress_installing_title">Installing overlays…</string>
    <string name="progress_uninstalling_title">Uninstalling overlays…</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_delay_msg">Installing an overlay, or any APK, on Samsung right after a reboot will take a lot of time. The device needs around 4 mins to finish all the startup processes. If you just rebooted, we recommend waiting a moment before installing overlays or change background and accents.\n\nHave fun theming :)</string>
    <string name="reboot_delay_title">After rebooting</string>
    <string name="reboot_later">Reboot later</string>
    <string name="reboot_manually">You need to reboot manually to finish uninstall.</string>
    <string name="reboot_to_finish">Manually reboot!</string>
    <string name="required">- Required</string>
    <string name="send_error_log">Send error log</string>
    <string name="sender_name_preview">Michael</string>
    <string name="small_info_active">Active :</string>
    <string name="small_info_updates">Updates :</string>
    <string name="sound_and_vibration">Sound and vibration</string>
    <string name="sounds_and_vibration_desc">Sounds, Vibration, Do not disturb</string>
    <string name="stock_icons">Stock accented</string>
    <string name="successful">Successful</string>
    <string name="swift_black">Black</string>
    <string name="swift_dark">Dark</string>
    <string name="swift_style">Style</string>
    <string name="tab_active">Active</string>
    <string name="tab_failed">Failed</string>
    <string name="tab_inactive">Inactive</string>
    <string name="tab_update">Update</string>
    <string name="toolbar_title_installation_summary">Installation summary</string>
    <string name="tutorial_apps">You can theme 181 apps with Swift Installer. We provide dialogs at certain places in the app containing important information to ensure you get the best experience possible. Make sure to read the information when it shows up :)</string>
    <string name="tutorial_apps_title">181 themed apps</string>
    <string name="tutorial_basic_usage_content">The best way to keep all overlays working over time is to disable automatic updates in Play Store, and update your apps when we update the theme. This way the theme code and app code will match, and work.\n\nBefore updating your firmware you <b>must</b> uninstall all active overlays. And if you update an app from Play Store, you need to update the respective overlay.</string>
    <string name="tutorial_customize_content">You can change to your favourite background and accent color before installing overlays. Input any color code you want and create that personal feeling!</string>
    <string name="tutorial_customize_title">Personalize background and accent</string>
    <string name="tutorial_guide">Swift Installer makes your system dark, and personal. It\'s important for you to get to know the installer before using it, so please take a moment and read the following guide…</string>
    <string name="tutorial_more_usage_info">The first install will require you to install all apps manually, and this means a lot of clicking. Once the first install is done, it will all be much smoother and faster due to our update system. There is a learning curve, but once you get a hang of it, you\'ll find it easy to use.\n\nNote that we cannot guarantee a stable experience if you use this app in combination with native Samsung themes or Substratum overlays.</string>
    <string name="tutorial_more_usage_title">First install</string>
    <string name="tutorial_permission_content">A theme contain overlays, and it\'s the overlay that applies on top of an app and themes it. Overlays gets installed as APK\'s on your device. By pressing \'Give\' you acknowledge and accept this. \n\n We also need storage permission as we temporarily place the APK on the storage before installing it. Press \'Give\' to grant the permission. Lastly, we use a special Samsung permission to activate overlays on reboot.</string>
    <string name="tutorial_permission_title">Permissions</string>
    <string name="white_notifications">White notifications</string>
    <string name="white_notifications_preview">A preview of white notifications</string>
    <string name="continue_theming">Continue theming</string>
    <string name="exit_to_main">Exit to main menu</string>
    <string name="stock_icons_multi">Stock multi-colored</string>
    <string name="android_p">Android P (settings only)</string>
    <string name="force_close">Force close</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="centered">Centered</string>
    <string name="clock">Clock</string>
    <string name="base_theme_dialog_info">The material theme uses a slightly lighter or darker colors for cards, dialogs, popups etc. to distinguish the background from the themed app background. Flat theme is just flat, and the background color is mostly the same everywhere.</string>
    <string name="base_theme_dialog_title">Base Theme</string>
    <string name="default_style">Default</string>
    <string name="android_p_rounded_style">Android P rounded</string>
    <string name="notification_style">Notification style</string>
    <string name="rounded_info">Info!</string>
    <string name="rounded_dialog_info">This option is only tested on stock ROMs. Custom ROMs are not tested and they might cause conflicts with this option. If you want to use this option on a custom ROM, make sure you have adb debugging enabled and the rescue script available.</string>
    <string name="rounded_dialog_title">Rounded style info</string>
    <string name="white">White</string>
    <string name="alpha_value">%1$d %%</string>
    <string name="gboard_bg_info">To make the Gboard overlay work, you need to set up and activate a theme with a custom picture background from Gboard\'s theme settings. Download an image with your selected background by clicking save, and use the image in Gboard.\n\nImage will be saved as swift_bg.png in sdcard/Download/</string>
    <string name="gboard_dialog_title">Gboard background</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="save_error">Error saving image</string>
    <string name="unsupported">Unsupported, please uninstall</string>
    <string name="qs_transparency">Quick settings transparency:</string>
    <string name="whats_this">What\'s this?</string>
    <string name="blocked_packages_title">Info</string>
    <string name="blocked_packages_message">Due to Samsung restrictions, this overlay won\'t be enabled on its own. After you install the overlays and reboot, you will just need to run the enable script from your desktop or laptop to make it work correctly. You can find the script in Changelog document whose link can be found in Play Store description of Swift Installer.</string>
    <string name="empty_list_inactive">All overlays active</string>
    <string name="empty_list_active">No active overlays</string>
    <string name="empty_list_updates">No updates available</string>
    <string name="help_msg">Here are some useful links if you need help:</string>
</resources>