<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2018 Griffin Millender
  ~  * Copyright (C) 2018 Per Lycke
  ~  * Copyright (C) 2018 Davide Lilli & Nishith Khanna
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * This program is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/clock_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif"
        android:text="@string/clock"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clock_category_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:background="@color/divider"
        android:contentDescription="@string/image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/clock_category_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clock_category_title"
        app:layout_constraintTop_toTopOf="@+id/clock_category_title" />

    <RadioButton
        android:id="@+id/right_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/right"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/clock_category_title" />

    <RadioButton
        android:id="@+id/left_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/left"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/right_clock"
        app:layout_constraintTop_toBottomOf="@+id/right_clock" />

    <RadioButton
        android:id="@+id/centered_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/centered"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/left_clock"
        app:layout_constraintTop_toBottomOf="@+id/left_clock" />

</merge>