<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/customizeToolbarBg"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/big_tile_tint" />

    <Button
        android:id="@+id/customizeCancelBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="cancelBtnClick"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/customizeToolbarBg"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/customizeToolbarBg"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/customizeConfirmBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/confirm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/customizeToolbarBg"
        app:layout_constraintEnd_toEndOf="@+id/customizeToolbarBg"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/customizeToolbarBg" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>