<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/card_personalize_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_tile_bg" />

    <ImageView
        android:id="@+id/card_personalize_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="@+id/card_personalize_bg"
        app:layout_constraintStart_toStartOf="@+id/card_personalize_bg"
        app:layout_constraintTop_toTopOf="@+id/card_personalize_bg"
        app:srcCompat="@drawable/ic_accent_new" />

    <TextView
        android:id="@+id/card_personalize_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/big_tile_personalize_title"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_personalize_desc"
        app:layout_constraintEnd_toEndOf="@+id/card_personalize_bg"
        app:layout_constraintStart_toEndOf="@+id/card_personalize_icon"
        app:layout_constraintTop_toTopOf="@+id/card_personalize_bg"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/card_personalize_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/big_tile_personalize_msg"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_personalize_bg"
        app:layout_constraintEnd_toEndOf="@+id/card_personalize_bg"
        app:layout_constraintStart_toEndOf="@+id/card_personalize_icon"
        app:layout_constraintTop_toBottomOf="@+id/card_personalize_title" />

</android.support.constraint.ConstraintLayout>